--- a/KOMiT/KOMiT.API/appsettings.json
+++ b/KOMiT/KOMiT.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "KOMiTConnectionString": "Server=10.56.8.36;Database=PEDB30;User id=PE-30;Password=OPENDB_30; TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,3 +10,4 @@
   },
   "AllowedHosts": "*"
 }
+
