--- a/KOMiT/KOMiT.App/KOMiT.App.csproj
+++ b/KOMiT/KOMiT.App/KOMiT.App.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\KOMiT.Core\KOMiT.Core.csproj" />
     <ProjectReference Include="..\KOMiT.DataAccess\KOMiT.DataAccess.csproj" />
   </ItemGroup>
 
