--- a/KOMiT/KOMiT.Client/KOMiT.Client.csproj
+++ b/KOMiT/KOMiT.Client/KOMiT.Client.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Pages\Swagger.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.22" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.22" PrivateAssets="all" />
   </ItemGroup>
@@ -14,6 +18,18 @@
   <ItemGroup>
     <ProjectReference Include="..\KOMiT.App\KOMiT.App.csproj" />
     <ProjectReference Include="..\KOMiT.Core\KOMiT.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Pages\Swagger.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Pages\Swagger.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Pages\Swagger.razor" />
   </ItemGroup>
 
 
